k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sample-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: sample-app

  template:
    metadata:
      labels:
        app: sample-app

    spec:

      imagePullSecrets:
      - name: ecr-secret

      containers:
      - name: sample-app

        image: 945475931981.dkr.ecr.eu-north-1.amazonaws.com/sample-app:1

        imagePullPolicy: Always

        ports:
        - containerPort: 8080
