k8s/Service.yml
apiVersion: v1
kind: Service

metadata:
  name: sample-app-service

spec:
  type: NodePort

  selector:
    app: sample-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
