k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sample-app-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: sample-app.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: sample-app-service

            port:
              number: 80
